# preflight-budget-gate-lab

./: .gitignore  README.md  package.json  pyproject.toml
budget_gate_lab/: __init__.py  demo.py  graph.py  ledger.py  policy.py  state.py
docs/: architecture.md  audit-trace.example.json  linkedin-architecture-note.md  linkedin-post.md  social-card-brief.json  social-card-prompt.md
scripts/: generate_codex_social_card.py  render_social_card.mjs  render_social_card.py
tests/: test_budget_gate.py
